# hijessy_comate

./: .gitignore  Cargo.toml  LICENSE  README.md
.comate/specs/overlay-lifecycle-window-follow/: doc.md  summary.md  tasks.md
.comate/specs/screenshot-studio/: doc.md  summary.md  tasks.md
.comate/specs/tray-toolbar-refactor/: doc.md  summary.md  tasks.md
.github/workflows/: ci.yml  release.yml
scripts/: bundle-macos.sh
src/: app.rs  fonts.rs  main.rs  settings.rs  tray.rs
src/capture/: engine.rs  mod.rs  scroll.rs
src/config/: hotkeys.rs  mod.rs
src/editor/: compose.rs  mod.rs  model.rs
src/hotkey/: mod.rs
src/output/: clipboard.rs  file.rs  mod.rs
src/overlay/: icons.rs  mod.rs
