[package]
name = "hijessy"
version = "0.1.0"
edition = "2024"
description = "跨平台轻量截图工具（Rust + egui）：窗口/框选截图、标注、剪贴板与保存"
license = "MIT"
repository = "https://github.com/Doswind/hijessy_comate"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.103"
arboard = { version = "3.6.1", features = ["image-data"] }
eframe = "0.35.0"
egui = "0.35.0"
global-hotkey = "0.8.0"
image = "0.25.10"
mouse_position = "0.1.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tray-icon = "0.21.3"
xcap = { version = "0.9.6", features = ["image"] }

# 体积/内存优化：优先最小体积
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
